# qrcode-detection-server

./: CMakeLists.txt  README.md
cmake/module/: FindARToolKitPlus.cmake  Findchilitags.cmake
src/: server.cpp
